--- a/index.html
+++ b/index.html
@@ -5,13 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css">
+     <!-- box icon -->
+     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css"> -->
     <title>Portfolio</title>
 </head>
 <body>
-    
+   <header class="header" id="header">
+    <nav class="nav container">
+      <a href="#" class="nav_logo">Praisejah</a>
 
+      <div class="nav_menu" id="nav-menu">
+          <ul class="nav_list grid">
+              <li class="nav_item">
+                  <a href="#home" class="nav_link">
+                    <i class='bx bx-home-alt nav_icon'  ></i> Home
+                  </a>
+              </li>
+              <li class="nav_item">
+                <a href="#about" class="nav_link">
+                    <i class='bx bx-user nav_icon' ></i> About
+                </a>
+            </li>
+            <li class="nav_item">
+                <a href="#skills" class="nav_link">
+                    <i class='bx bx-file nav_icon' ></i> Skills
+                </a>
+            </li>
+            <li class="nav_item">
+                <a href="#service"s class="nav_link">
+                    <i class='bx bx-briefcase-alt-2 nav_icon'  ></i> Services
+                </a>
+            </li>
+            <li class="nav_item">
+                <a href="#"portfolio class="nav_link">
+                    <i class='bx bx-image nav_icon'></i> Portfolio
+                </a>
+            </li>
+            <li class="nav_item">
+                <a href="#contact" class="nav_link">
+                    <i class='bx bx-message-rounded-dots nav_icon'></i> Contactme
+                </a>
+            </li>
+          </ul>
+          <i class='bx bx-window-close bx-rotate-180 nav_close'  ></i>
+      </div>
 
+      <div class="nav_btns">
+          <div class="nav_toggle" id="nav-toggle">
+            <i class='bx bx-menu-alt-left '></i>
+          </div>
+      </div>
+    </nav>
+   </header>
+
+    <main class="main">
+
+    </main>
 
     <script src="js/script.js"></script>
 </body>
