create about page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
             </li>
           </ul>
-          <i class='bx bx-window-close bx-rotate-180 nav_close'  ></i>
+          <i class='bx bx-window-close bx-rotate-180 nav_close' id="nav-close" ></i>
       </div>
 
       <div class="nav_btns">
@@ -60,7 +60,51 @@
    </header>
 
     <main class="main">
+      <section class="home section" id="home">
+          <div class="home_container container grid">
+              <div class="home_content grid">
+                  <div class="home_social">
+                      <a href="http://www.instagram.com/" target="_blank" class="home_social-icon">
+                        <i class='bx bxl-instagram' ></i>
+                      </a>
 
+                      <a href="https://www.twitter.com/" target="_blank" class="home_social-icon">
+                        <i class='bx bxl-twitter' ></i>
+                      </a>
+
+                    <a href="https://github.com/praisejahuzoma" target="_blank" class="home_social-icon">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                  </div>
+
+                  <div class="home_img">
+                     <img src="images/heard-img.svg" class="home_blob-img">
+                  </div>
+                  <div class="home_data">
+                     <h1 class="home_title">Hi, I'am Praisejah</h1>
+                     <h3 class="home_subtitle">Frontend developer</h3>
+                     <p class="home_description">High level experience in web design and development knowledg, producing quality work.  </p>
+                     <a href="#contact" class="button button--flex">
+                        Contact Me <i class='bx bx-message-rounded-dots button_icon'></i>
+                     </a>
+                  </div>
+              </div>
+
+              <div class="home_scroll">
+                <a href="#about" class="home_scroll-button button--flex">
+                    <i class='bx bx-mouse home_scroll-mouse' ></i>
+                    <span class="home_scroll-name">Scroll down</span>
+                    <i class='bx bx-down-arrow-alt home_scroll-arrow' ></i>
+                </a>
+              </div>
+          </div>
+      </section>
+
+      <!-- about -->
+      <section class="about section" id="about">
+        <h2 class="section_title">About Me</h2>
+        <span class="section_subtitle">My introduction</span>
+      </section>
     </main>
 
     <script src="js/script.js"></script>
