finish about page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   </div>
 
                   <div class="home_img">
-                     <img src="images/heard-img.svg" class="home_blob-img">
+                     <img src="images/home.svg" class="home_blob-img">
                   </div>
                   <div class="home_data">
                      <h1 class="home_title">Hi, I'am Praisejah</h1>
@@ -104,6 +104,36 @@
       <section class="about section" id="about">
         <h2 class="section_title">About Me</h2>
         <span class="section_subtitle">My introduction</span>
+
+        <div class="about_container container grid">
+             <img src="images/about.svg" class="about_img">
+
+             <div class="about_data">
+                 <p class="about_description">High level experience in web design and development knowledg, producing quality work.</p>
+
+                 <div class="about_info">
+                     <div>
+                         <span class="about_info-title">08+</span>
+                         <span class="about_info-name">Years <br> experience</span>
+                     </div>
+                     <div>
+                        <span class="about_info-title">20+</span>
+                        <span class="about_info-name">Completed <br> project</span>
+                    </div>
+                    <div>
+                        <span class="about_info-title">05+</span>
+                        <span class="about_info-name">Companies <br> worked</span>
+                    </div>
+                 </div>
+
+                 <div class="about_buttons">
+                     <a download="" href="images/undraw.svg"class="button button--flex">
+                        Download CV<i class='bx bx-cloud-download button_icon' ></i>
+                    </a>
+
+                 </div>
+             </div>
+        </div>
       </section>
     </main>
 
