--- a/index.html
+++ b/index.html
@@ -130,10 +130,173 @@
                      <a download="" href="images/undraw.svg"class="button button--flex">
                         Download CV<i class='bx bx-cloud-download button_icon' ></i>
                     </a>
-
                  </div>
              </div>
         </div>
+      </section>
+
+      <!-- skills -->
+      <section class="skills section" id="skills">
+          <h2 class="section_title">Skills</h2>
+          <span class="section_subtitle">My technical level</span>
+
+          <div class="skills_container contanier grid">
+              <div>
+                  <!-- skills1 -->
+                  <div class="skills_content">
+                     <div class="skills_header">
+                        <i class='bx bx-code-curly skills_icon'></i>
+
+                        <div>
+                            <h1 class="skills_title">Frontend developer</h1>
+                            <span class="skills_subtitle">More than 4 years</span>
+                        </div>
+
+                        <i class='bx bx-chevron-down  skills_arrow' ></i>
+                     </div>
+
+                     <div class="skills_list grid">
+                         <div class="skills_data">
+                             <div class="skills_title">
+                                 <h3 class="skills_name">HTML</h3>
+                                 <span class="skills_number">90%</span>
+                             </div>
+                             <div class="skills_bar">
+                                 <span class="skills_percentage skills_html"></span>
+                             </div>
+                         </div>
+                         <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">CSS</h3>
+                                <span class="skills_number">80%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_css"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">JavaScript</h3>
+                                <span class="skills_number">60%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_js"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">React</h3>
+                                <span class="skills_number">0.5%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_react"></span>
+                            </div>
+                        </div>
+                     </div>
+                  </div>
+
+                     <!-- skills2 -->
+                     <div class="skills_content">
+                        <div class="skills_header">
+                            <i class='bx bx-server skills_icon'></i>
+                           <div>
+                               <h1 class="skills_title">Backend developer</h1>
+                               <span class="skills_subtitle">More than 2 years</span>
+                           </div>
+   
+                           <i class='bx bx-chevron-down  skills_arrow' ></i>
+                        </div>
+   
+                        <div class="skills_list grid">
+                            <div class="skills_data">
+                                <div class="skills_title">
+                                    <h3 class="skills_name">PHP</h3>
+                                    <span class="skills_number">10%</span>
+                                </div>
+                                <div class="skills_bar">
+                                    <span class="skills_percentage skills_php"></span>
+                                </div>
+                            </div>
+                            <div class="skills_data">
+                               <div class="skills_title">
+                                   <h3 class="skills_name">Node Js</h3>
+                                   <span class="skills_number">20%</span>
+                               </div>
+                               <div class="skills_bar">
+                                   <span class="skills_percentage skills_node"></span>
+                               </div>
+                           </div>
+   
+                           <div class="skills_data">
+                               <div class="skills_title">
+                                   <h3 class="skills_name">Firebase</h3>
+                                   <span class="skills_number">40%</span>
+                               </div>
+                               <div class="skills_bar">
+                                   <span class="skills_percentage skills_firebase"></span>
+                               </div>
+                           </div>
+                           <div class="skills_data">
+                               <div class="skills_title">
+                                   <h3 class="skills_name">Python</h3>
+                                   <span class="skills_number">8%</span>
+                               </div>
+                               <div class="skills_bar">
+                                   <span class="skills_percentage skills_python"></span>
+                               </div>
+                           </div>
+                        </div>
+                     </div>
+              </div>
+
+              <div>
+                  <!-- skills 3 -->
+                  <div class="skills_content">
+                    <div class="skills_header">
+                        <i class='bx bx-book-content skills_icon'></i>
+
+                       <div>
+                           <h1 class="skills_title">Designer</h1>
+                           <span class="skills_subtitle">More than 1 years</span>
+                       </div>
+
+                       <i class='bx bx-chevron-down  skills_arrow' ></i>
+                    </div>
+
+                    <div class="skills_list grid">
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">Figma</h3>
+                                <span class="skills_number">20%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_figma"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                           <div class="skills_title">
+                               <h3 class="skills_name">Sketch</h3>
+                               <span class="skills_number">0%</span>
+                           </div>
+                           <div class="skills_bar">
+                               <span class="skills_percentage skills_sketch"></span>
+                           </div>
+                       </div>
+
+                       <div class="skills_data">
+                           <div class="skills_title">
+                               <h3 class="skills_name">Photoshop</h3>
+                               <span class="skills_number">5%</span>
+                           </div>
+                           <div class="skills_bar">
+                               <span class="skills_percentage skills_photoshop"></span>
+                           </div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+          </div>
       </section>
     </main>
 
