finish skill page

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
           <h2 class="section_title">Skills</h2>
           <span class="section_subtitle">My technical level</span>
 
-          <div class="skills_container contanier grid">
+          <div class="skills_container container grid">
               <div>
                   <!-- skills1 -->
-                  <div class="skills_content">
+                  <div class="skills_content skills_open">
                      <div class="skills_header">
                         <i class='bx bx-code-curly skills_icon'></i>
 
@@ -157,7 +157,7 @@
 
                      <div class="skills_list grid">
                          <div class="skills_data">
-                             <div class="skills_title">
+                             <div class="skills_titles">
                                  <h3 class="skills_name">HTML</h3>
                                  <span class="skills_number">90%</span>
                              </div>
@@ -166,7 +166,7 @@
                              </div>
                          </div>
                          <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">CSS</h3>
                                 <span class="skills_number">80%</span>
                             </div>
@@ -176,7 +176,7 @@
                         </div>
 
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">JavaScript</h3>
                                 <span class="skills_number">60%</span>
                             </div>
@@ -185,7 +185,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">React</h3>
                                 <span class="skills_number">0.5%</span>
                             </div>
@@ -197,11 +197,11 @@
                   </div>
 
                      <!-- skills2 -->
-                     <div class="skills_content">
+                     <div class="skills_content skills_close">
                         <div class="skills_header">
                             <i class='bx bx-server skills_icon'></i>
                            <div>
-                               <h1 class="skills_title">Backend developer</h1>
+                               <h1 class="skills_titles">Backend developer</h1>
                                <span class="skills_subtitle">More than 2 years</span>
                            </div>
    
@@ -210,7 +210,7 @@
    
                         <div class="skills_list grid">
                             <div class="skills_data">
-                                <div class="skills_title">
+                                <div class="skills_titles">
                                     <h3 class="skills_name">PHP</h3>
                                     <span class="skills_number">10%</span>
                                 </div>
@@ -219,7 +219,7 @@
                                 </div>
                             </div>
                             <div class="skills_data">
-                               <div class="skills_title">
+                               <div class="skills_titles">
                                    <h3 class="skills_name">Node Js</h3>
                                    <span class="skills_number">20%</span>
                                </div>
@@ -229,7 +229,7 @@
                            </div>
    
                            <div class="skills_data">
-                               <div class="skills_title">
+                               <div class="skills_titles">
                                    <h3 class="skills_name">Firebase</h3>
                                    <span class="skills_number">40%</span>
                                </div>
@@ -238,7 +238,7 @@
                                </div>
                            </div>
                            <div class="skills_data">
-                               <div class="skills_title">
+                               <div class="skills_titles">
                                    <h3 class="skills_name">Python</h3>
                                    <span class="skills_number">8%</span>
                                </div>
@@ -252,12 +252,12 @@
 
               <div>
                   <!-- skills 3 -->
-                  <div class="skills_content">
+                  <div class="skills_content skills_close">
                     <div class="skills_header">
                         <i class='bx bx-book-content skills_icon'></i>
 
                        <div>
-                           <h1 class="skills_title">Designer</h1>
+                           <h1 class="skills_titles">Designer</h1>
                            <span class="skills_subtitle">More than 1 years</span>
                        </div>
 
@@ -266,7 +266,7 @@
 
                     <div class="skills_list grid">
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">Figma</h3>
                                 <span class="skills_number">20%</span>
                             </div>
@@ -275,7 +275,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                           <div class="skills_title">
+                           <div class="skills_titles">
                                <h3 class="skills_name">Sketch</h3>
                                <span class="skills_number">0%</span>
                            </div>
@@ -285,7 +285,7 @@
                        </div>
 
                        <div class="skills_data">
-                           <div class="skills_title">
+                           <div class="skills_titles">
                                <h3 class="skills_name">Photoshop</h3>
                                <span class="skills_number">5%</span>
                            </div>
