--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
             </li>
           </ul>
-          <i class='bx bx-window-close bx-rotate-180 nav_close' id="nav-close" ></i>
+         <i class='bx bx-x nav_close' id="nav-close"></i>
       </div>
 
       <div class="nav_btns">
